--- a/manifest.json
+++ b/manifest.json
@@ -1,15 +1,17 @@
 {
   "manifest_version": 3,
   "name": "Perturba - 이미지 방어막",
-  "version": "1.0",
-  "description": "인스타그램/트위터 업로드 전 이미지를 변환하여 보호합니다.",
+  "version": "1.1.0",
+  "description": "인스타그램/트위터 업로드 전 이미지를 변환하여 얼굴을 보호합니다.",
   "permissions": [
     "activeTab",
     "scripting",
-    "cookies"
+    "cookies",
+    "tabs"
   ],
   "host_permissions": [
-    "https://woojangpark.site/*"
+    "https://woojangpark.site/*",
+    "https://api.woojangpark.site/*"
   ],
   "background": {
     "service_worker": "background.js"
